<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.initiatepagedata.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <Spinner
            android:id="@+id/typecontent"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:entries="@array/activity" />
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content"
            android:text="@string/needtime"/>
        <Spinner
            android:id="@+id/needtime"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:entries="@array/needtime"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content"
            android:text="@string/startplace"/>
        <Spinner
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/startcity"
            android:entries="@array/startcity"/>
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content"
            android:text="@string/finshplace"/>
        <Spinner
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/finshcity"
            android:entries="@array/finshcity"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/startcounty"
            android:entries="@array/startcounty"/>
        <TextView
            android:layout_width="45sp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:id="@+id/finshcounty"
            android:entries="@array/finshcounty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityValidity"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activityValidity"
            android:text="@string/choosedata"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peoples"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/peoples"
            android:entries="@array/peoples"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveCar"
            android:text="@string/haveCar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NoCar"
            android:text="@string/NoCar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Introduction"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Introduction"
            android:hint="@string/PromptInformation"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:hint="@string/price1"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price2"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="3">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/cancel"
                android:text="@string/cancel"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/next"
                android:text="@string/next"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
